# Morpheus

./: .gitignore  AGENT.md  CLAUDE.md  README.md  docker-compose.prod.yml  playwright-before-submit-live.md  playwright-before-submit-snapshot.md
.VSCodeCounter/2026-02-22_19-10-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.sisyphus/: boulder.json
.sisyphus/evidence/: f2-quality-review.txt  f3-qa-replay.txt  task-1-model-serialization.txt  task-10-graph-api.txt  task-11-memory-l4.txt  task-12-graph-page.txt  task-13-nav-graph.txt  task-15-export-l4.txt  task-16-import-new.txt  task-17-roundtrip.txt  task-2-bad-zip-400.txt  task-2-roundtrip-import.txt  task-5-flag-on.txt  task-8-auto-trigger.txt
.sisyphus/plans/: knowledge-graph-revival.md  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/agents/: studio.py
backend/api/: main.py
backend/core/: chapter_craft.py  llm_client.py  story_templates.py
backend/docs/: API接口文档.md
backend/memory/: __init__.py  search.py
backend/models/: __init__.py
backend/scripts/: dedup_l3.py  refresh_memory.py  run_api.sh
backend/services/: character_profile_extraction.py  character_profile_merge.py  consistency.py  memory_context.py
backend/tests/: test_agent_non_blocking.py  test_api_smoke.py  test_export_import.py  test_graph_aliases_store.py  test_graph_audit_log.py  test_graph_crud_api.py  test_graph_merge_api.py  test_graph_overrides_store.py  test_l2_memory_fixes.py  test_l4_api.py  test_l4_auto_trigger.py  test_l4_export.py  test_l4_extraction_parser.py  test_l4_extraction_service.py  test_l4_feature_flags.py  test_l4_graph_api.py  test_l4_import.py  test_l4_merge_engine.py  test_l4_models.py  test_l4_rebuild_api.py  test_l4_roundtrip.py  test_l4_store.py  test_memory_context.py  test_memory_context_pbt.py  test_studio_plan_parser.py
backend/utils/: text_cleaner.py
docs/: BUGFIX_REPORT_2026-02-17.md  QUICKSTART.md  deployment-server.md  document-first-development-policy.md  knowledge-graph-standard-mode.md  morpheus-mcp-service-adaptation.md  novelist-agent-requirements.md  writing-console-simplification-plan.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: predeploy_check.sh
test-results/: .last-run.json
(+186 files in other folders)
